k8s-yaml/nginx-test/nginx-test-all.yaml
########### namespace
apiVersion: v1
kind:       Namespace
metadata:
   name:    nginx
   labels:
     name:  nginx

############ pv
---
#apiVersion:           v1
#kind:                 ReplicationController
apiVersion:           apps/v1
kind:                 Deployment
metadata:
  name:               nginx-test-depl
  namespace:          nginx
spec:
  replicas:           2
  selector:
    #name:             nginx-test-rc
    #namespace:        nginx
    matchLabels:
      app:            nginx-test-depl
      release:        v1
  template:
    metadata:
      labels:
        #name:         nginx-test-rc
        #namespace:    nginx
        app:          nginx-test-depl
        release:      v1
    spec:
      containers:
      - name:         nginx-test
        image:        nginx:alpine
        volumeMounts:
        - mountPath:  /usr/share/nginx/html
          name:       nginx-data
        - mountPath:  /etc/nginx
          name:       nginx-etc
        ports:
        - containerPort: 80
      volumes:
      - name:         nginx-data
#        hostPath:
#          path: /var/lib/docker/nginx/data
        persistentVolumeClaim:
          claimName:  nfs-pvc-nginx-data
      - name:         nginx-etc
#        hostPath:
#          path: /var/lib/docker/nginx/etc
        persistentVolumeClaim:
          claimName:  nfs-pvc-nginx-etc


############# svc
---
apiVersion:     v1
kind:           Service
metadata:
  name:         nginx-test-svc
  namespace:    nginx
  labels: 
    app:        nginx-test-svc
    release:    v1
spec:
  type:         NodePort
  ports:
  - port:       80
    #protocol:   TCP
    targetPort: 80
    #name:       http
    #nodePort:   30080
  selector:
    #name:        nginx-test-rc
    #namespace:   nginx
    app:        nginx-test-depl
    release:    v1


###############
---
apiVersion:            extensions/v1beta1
kind:                  Ingress
metadata:
  name:                nginx-test-ingress
  namespace:           nginx
  annotations: 
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host:              nginx.forsrc.com
    http:
      paths:
      - path:
        backend:
          serviceName: nginx-test-svc
          servicePort: 80
